--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exam Timer</title>
+    <title>Display</title>
 </head>
 
-<body onload="updateTime()">
-    <h1>Welcome to Computing</h1>
+<body onload="init()">
     <div>
         <div id="clock"></div>
         <div id="date"></div>
+        <div id="currentPeriod"></div>
+        <div id="currentDenaryWeek"></div>
+        <div id="currentBinaryWeek"></div>
+        <div id="currentHexWeek"></div>
     </div>
     <script type="text/javascript" src="index.js"></script>
 </body>
