--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Display</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body onload="init()">
-    <div>
-        <div id="clock"></div>
-        <div id="date"></div>
-        <div id="currentPeriod"></div>
-        <div id="currentDenaryWeek"></div>
-        <div id="currentBinaryWeek"></div>
-        <div id="currentHexWeek"></div>
+    <div class="container">
+        <div class="top-bar">
+            <div id="date" class="date"></div>
+            <div id="currentPeriod" class="period"></div>
+        </div>
+        <div id="clock" class="time"></div>
+        <div class="bottom-bar">
+            <div class="week">
+                <span id="currentDenaryWeek"></span>
+                <span class="subscript">10</span>
+            </div>
+            <div class="week">
+                <span id="currentBinaryWeek"></span>
+                <span class="subscript">2</span>
+            </div>
+            <div class="week">
+                <span id="currentHexWeek"></span>
+                <span class="subscript">16</span>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="index.js"></script>
 </body>
-
 </html>
