add cycling questions

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <div id="currentPeriod" class="period"></div>
         </div>
         <div id="clock" class="time"></div>
+        <div id="questionAnswerContainer" class="qa-container">
+            <div id="question" class="question"></div>
+            <div id="answer" class="answer"></div>
+        </div>
         <div class="bottom-bar">
             <div class="week">
                 <span id="currentDenaryWeek"></span>
@@ -28,6 +32,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="qa.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
