--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
     </div>
     <script type="text/javascript" src="qa.js"></script>
+    <script type="text/javascript" src="qagen.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
